examples/fault-injection/abort/destination-rule.yml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hello-fault-injection-abort-ds
spec:
  host: hello
  subsets:
  - name: all
    labels:
      app: hello
